src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Reviewer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The company that is conducting the assessment.</inlineHelpText>
        <label>Account (Reviewer)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AssessmentsToReview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The company that is the subject of the assessment.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assessments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Review_Items__c</fullName>
        <label>Completed Review Items</label>
        <summaryFilterItems>
            <field>review_item__c.Review_Item_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>review_item__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Roll_Up__c</fullName>
        <description>Calculated Grade using Review items. This is populated by Declarative Lookup Rollup Summary application that is installed.</description>
        <inlineHelpText>Calculated Grade using Review items. This is populated by Declarative Lookup Rollup Summary application that is installed.</inlineHelpText>
        <label>Grade Roll Up_OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Rollup2__c</fullName>
        <inlineHelpText>Rollup count of Review Items with status of Complete. Used to calculate the assessment Grade.</inlineHelpText>
        <label>Grade_Rollup</label>
        <summarizedField>review_item__c.Grade_Number__c</summarizedField>
        <summaryFilterItems>
            <field>review_item__c.Review_Item_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>review_item__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>The grade field is either &quot;total grade&quot; as populated manually by an end user or the calculated value of the grade based on the review items. If a user populates &quot;total grade&quot; field on the Assessment, that value overrides the calculated value of the review items.</description>
        <formula>IF ( NOT ( ISBLANK( Total_Grade__c ) ), Total_Grade__c,
     IF ( Grade_Rollup2__c = 0, 0, 
      ( Grade_Rollup2__c / Completed_Review_Items__c ) ) )</formula>
        <label>Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_a_Reviewer__c</fullName>
        <description>Is the current user an external reviewer for this assessment?</description>
        <formula>NOT(ISBLANK($User.Account_Id__c)) &amp;&amp; NOT(ISBLANK(Account_Reviewer__c)) &amp;&amp; $User.Account_Id__c = Account_Reviewer__c</formula>
        <inlineHelpText>Is the current user an external reviewer for this assessment?</inlineHelpText>
        <label>Is Current User a Reviewer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Item_Count__c</fullName>
        <description>Count of the total number of review items</description>
        <label>Review Item Count</label>
        <summaryForeignKey>review_item__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Review_Items_Open__c</fullName>
        <label>Review Items Open</label>
        <summaryFilterItems>
            <field>review_item__c.Review_Item_Status__c</field>
            <operation>equals</operation>
            <value>Pending, In File, In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>review_item__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Review_Items_Total__c</fullName>
        <label>Review Items Total</label>
        <summaryForeignKey>review_item__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Approved Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Summary__c</fullName>
        <description>Executive summary of the review.</description>
        <label>Review Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>tech_review_deep_dive</fullName>
                    <label>Technical Review (Deep Dive)</label>
                </value>
                <value>
                    <fullName>Technical Review (periodic)</fullName>
                </value>
                <value>
                    <fullName>Financial_Assessment</fullName>
                    <label>Financial Assessment</label>
                </value>
                <value>
                    <fullName>Business Assessment</fullName>
                </value>
                <value>
                    <fullName>Legal Assessment</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Technology Review (Prospect)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person reviewing the assessment. First point of contact in the workflow.</description>
        <inlineHelpText>The person reviewing the assessment. First point of contact in the workflow.</inlineHelpText>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Due_Diligence_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ready for Canapi to review this assessment, please check this box.</inlineHelpText>
        <label>Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the record has been submitted for approval</description>
        <inlineHelpText>This indicates that the record has been submitted for approval</inlineHelpText>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Grade__c</fullName>
        <description>Used to override the Grade on the assessment.</description>
        <inlineHelpText>Used to override the Grade on the assessment.</inlineHelpText>
        <label>Total Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Due Diligence Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Total_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Due Diligence Checklists</label>
    </listViews>
    <listViews>
        <fullName>Assessments_to_Review</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Summary__c</columns>
        <columns>Review_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_a_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Due Diligence Checklists to Review</label>
    </listViews>
    <listViews>
        <fullName>Current_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Review_Date__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_a_Reviewer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Current Due Diligence Checklists</label>
    </listViews>
    <listViews>
        <fullName>Current_Assessments_Test</fullName>
        <columns>NAME</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_a_Reviewer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Due Diligence Checklists Test</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Due Diligence Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>